updated some breakpoints. Galaxy fold is presenting a weird problem - white space need to fix later

--- a/src/Components/Blog/Blog.scss
+++ b/src/Components/Blog/Blog.scss
@@ -1,5 +1,11 @@
 @import "../../Variables/Sass/SassVariables.scss";
 
+.blog_wrapper {
+  color: $whiteColor;
+  overflow: hidden;
+  list-style-type: square;
+}
+
 /* ui elements */
 .blog_wrapper select,
 .blog_wrapper label,
