--- a/src/Components/Reusable/Title/Title.scss
+++ b/src/Components/Reusable/Title/Title.scss
@@ -12,7 +12,7 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-family: "Staatliches";
-  font-size: 4rem;
+  font-size: 5rem;
   text-align: center;
 }
 
